--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,4 @@
-package: github.hpe.com/UNCLE/kafka-watcher
+package: github.com/monasca/monasca-watchers
 import:
 - package: github.hpe.com/kronos/kelog
 - package: github.com/confluentinc/confluent-kafka-go
